<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dimitrijestefan.mosis.elfak.MainActivity">


    <item
        android:id="@+id/show_map_item"
        android:orderInCategory="100"
        android:title="@string/show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_24dp"

        />

    <item
        android:id="@+id/my_places_list_item"
        android:orderInCategory="100"
        android:title="@string/my_places_list"
        android:icon="@drawable/ic_list_24dp"

        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/about_item"
        android:orderInCategory="100"
        android:title="@string/about"
        android:icon="@drawable/ic_info_24dp"
        app:showAsAction="ifRoom"
        />

</menu>
